# karma

./: .clang-format  CMakeLists.txt  README.md  database.json  kgl_configuration.json  kgl_configuration.json.bak  setup.json
doxygen/: doxygen.cfg
krender/: test.krender
nbbuild/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
shaders/: basic.frag  basic.vert  combine.frag  combine.vert  instanced_sprite.frag  instanced_sprite.vert  present.frag  present.vert  shader.frag  shader.vert  sprite.frag  sprite.vert  test.comp  text.frag  text.vert
spirv/: big_shit  compute.uwuc  shader.uwu
src/: CMakeLists.txt
src/casper/: CMakeLists.txt  casper.cpp  casper.h  main.cpp
src/casper/io/: CMakeLists.txt  casper_object_loader.cpp  casper_object_loader.h
src/casper/tools/: CMakeLists.txt
src/casper/tools/shader/: CMakeLists.txt  casper_shader.cpp  casper_shader.h  main.cpp
src/casper/vulkan/: CMakeLists.txt  casper_vulkan.cpp  casper_vulkan.h  casper_vulkan_2d_vertex.cpp  casper_vulkan_2d_vertex.h  casper_vulkan_buffer.cpp  casper_vulkan_buffer.h  casper_vulkan_command_buffer.cpp  casper_vulkan_command_buffer.h  casper_vulkan_descriptor_pool.cpp  casper_vulkan_descriptor_pool.h  casper_vulkan_descriptor_set.cpp  casper_vulkan_descriptor_set.h  casper_vulkan_device.cpp  casper_vulkan_device.h  casper_vulkan_device_pool.cpp  casper_vulkan_error_handler.cpp  casper_vulkan_error_handler.h  casper_vulkan_image.cpp  casper_vulkan_image.h  casper_vulkan_pipeline.cpp  casper_vulkan_pipeline.h  casper_vulkan_pipeline_configuration.cpp  casper_vulkan_semaphore.cpp  casper_vulkan_semaphore.h  casper_vulkan_shader.cpp  casper_vulkan_surface.cpp  casper_vulkan_surface.h  casper_vulkan_surface_manager.cpp  casper_vulkan_surface_manager.h  casper_vulkan_swapchain.cpp  casper_vulkan_swapchain.h  casper_vulkan_validation_layer.cpp  casper_vulkan_validation_layer.h  casper_vulkan_vertex.h  casper_vulkan_window.cpp  casper_vulkan_window.h
src/casper/window/: casper_library.cpp  casper_library.h  casper_window.cpp  casper_window.h  casper_window_manager.cpp  casper_window_manager.h
src/config/: CMakeLists.txt  Configuration.cpp  Configuration.h  Parser.cpp  Parser.h  test.cpp
src/data/: Bus.cpp  Bus.h  CMakeLists.txt  Pool.cpp  Pool.h  PoolData.cpp  PoolData.h  Signal.cpp  Signal.h  main.cpp
src/game/: CMakeLists.txt  main.cpp
src/game/application/: CMakeLists.txt  Game.cpp  Game.h
src/game/database/: CMakeLists.txt  Database.cpp  Database.h
src/game/graphics/: CMakeLists.txt  GraphicsManager.h
src/game/io/: CMakeLists.txt  IO.h  InputManager.h
src/game/manager/: CMakeLists.txt  Manager.cpp  Manager.h  StateManager.h
src/glm/glm/: CMakeLists.txt
src/kal/: CMakeLists.txt  KAL_Interface.cpp  KAL_Interface.h
src/kal/database/: CMakeLists.txt  Database.cpp  Database.h
src/kgl/: CMakeLists.txt  DrawCommand.cpp  DrawCommand.h  KGL_Interface.cpp  KGL_Interface.h  Setup.cpp  Setup.h
src/kgl/animation/: Animation2D.cpp  Animation2D.h  CMakeLists.txt
src/kgl/cmd/: CMakeLists.txt  DrawCommand.cpp  DrawCommand.h
src/kgl/containers/: BufferedStack.cpp  BufferedStack.h  CMakeLists.txt  Layered.cpp  Layered.h  List.cpp  List.h  test.cpp
src/kgl/database/: CMakeLists.txt  Database.cpp  Database.h
src/kgl/io/: CMakeLists.txt  Event.cpp  Event.h  Font.cpp  Font.h  ImageLoader.cpp  ImageLoader.h  Input.cpp  Input.h  ObjectLoader.cpp  ObjectLoader.h
src/kgl/managers/: AssetManager.cpp  AssetManager.h  CMakeLists.txt  CommandManager.cpp  CommandManager.h
src/kgl/vk/: CMakeLists.txt
src/kgl/vk/context/: Buffer.cpp  Buffer.h  CMakeLists.txt  Command.h  CommandBuffer.cpp  CommandBuffer.h  Context.cpp  Context.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Image.cpp  Image.h  ImageCommand.cpp  ImageCommand.h  Instance.cpp  Instance.h  Library.cpp  Library.h  Material.cpp  Material.h  Pipeline.cpp  Pipeline.h  PipelineConfig.cpp  PipelineConfig.h  RenderPass.cpp  RenderPass.h  Semaphore.cpp  Semaphore.h  Shader.cpp  Shader.h  Surface.cpp  Surface.h  Swapchain.cpp  Swapchain.h  Synchronization.cpp  Synchronization.h  Uniform.cpp  Uniform.h  (+4 more)
src/kgl/vk/data/: Buffer.h  CMakeLists.txt  Image.cpp  Image.h
src/kgl/vk/modules/: CMakeLists.txt
src/kgl/vk/modules/combiner/: CMakeLists.txt  Combiner.cpp  Combiner.h
src/kgl/vk/modules/instanced_spritesheet/: CMakeLists.txt  InstancedSpriteSheet.cpp  InstancedSpriteSheet.h
src/kgl/vk/modules/present/: CMakeLists.txt  Present.cpp  Present.h
src/kgl/vk/modules/render/: CMakeLists.txt  Render2D.cpp  Render2D.h
src/kgl/vk/modules/spritesheet/: CMakeLists.txt  SpriteSheet.cpp  SpriteSheet.h
src/kgl/vk/modules/text2D/: CMakeLists.txt  Text2D.cpp  Text2D.h
src/kgl/vk/node/: CMakeLists.txt  Graph.cpp  Graph.h  Loader.cpp  Loader.h  Manager.cpp  Manager.h  Module.cpp  Module.h  Synchronization.cpp  Synchronization.h
src/kgl/vk/old/: casper_library.cpp  casper_library.h  casper_vulkan_buffer.cpp  casper_vulkan_buffer.h  casper_vulkan_command_buffer.cpp  casper_vulkan_command_buffer.h  casper_vulkan_descriptor_pool.cpp  casper_vulkan_descriptor_pool.h  casper_vulkan_device_pool.cpp  casper_vulkan_device_pool.h  casper_vulkan_error_handler.h  casper_vulkan_image.cpp  casper_vulkan_pipeline.cpp  casper_vulkan_pipeline.h  casper_vulkan_pipeline_configuration.cpp  casper_vulkan_pipeline_configuration.h  casper_vulkan_semaphore.cpp  casper_vulkan_semaphore.h  casper_vulkan_shader.cpp  casper_vulkan_shader.h  casper_vulkan_validation_layer.h  main.cpp
src/log/: CMakeLists.txt  Log.cpp  Log.h  test.cpp
src/profiling/: CMakeLists.txt  Timer.cpp  Timer.h
src/tools/: CMakeLists.txt
src/tools/glslang/SPIRV/: CMakeLists.txt
src/tools/glslang/glslang/: CMakeLists.txt
src/tools/glslang/gtests/: TestFixture.cpp
src/tools/shader/: ArgumentParser.cpp  CMakeLists.txt  UWUShader.cpp  UWUShader.h  main.cpp
src/tools/uwumaker/: ArgumentParser.cpp  ArgumentParser.h  CMakeLists.txt  main.cpp
src/tools/uwuwriter/: CMakeLists.txt  UWUWriter.cpp  UWUWriter.h
uwu/: 2dimage.uwu  combine.uwu  isprite.uwu  (+4 more)
(+62 files in other folders)
