set( KARMA_PROFILING_SOURCES 
     Timer.cpp
   )
      
set( KARMA_PROFILING_HEADERS
     Timer.h
   )

set( KARMA_PROFILING_INCLUDES
   )

set( KARMA_PROFILING_LIBRARIES
    )

add_library( karma_profiling SHARED ${KARMA_PROFILING_SOURCES} ${KARMA_PROFILING_HEADERS} )

INSTALL( TARGETS karma_profiling EXPORT kgl_lib DESTINATION ${KARMA_LIB_INSTALL_DIR} )
INSTALL( TARGETS karma_profiling DESTINATION ${KARMA_LIB_INSTALL_DIR}                )
INSTALL( FILES ${KARMA_PROFILING_HEADERS} DESTINATION ${KARMA_HEADER_INSTALL_DIR}    )