set( KGL_ANIM_SOURCES 
     Animation2D.cpp
   )
      
set( KGL_ANIM_HEADERS
     Animation2D.h
   )

set( KGL_ANIM_INCLUDE_DIRS

   )

set( KGL_ANIM_LIBRARIES
    )

ADD_LIBRARY( kgl_animation SHARED ${KGL_ANIM_SOURCES} ${KGL_ANIM_HEADERS} )

INSTALL( TARGETS kgl_animation EXPORT kgl_lib DESTINATION ${KARMA_LIB_INSTALL_DIR} )
INSTALL( TARGETS kgl_animation DESTINATION ${KARMA_LIB_INSTALL_DIR}         )
INSTALL( FILES ${KGL_ANIM_HEADERS} DESTINATION ${KARMA_HEADER_INSTALL_DIR} )
