set( KGL_CMD_SOURCES 
     DrawCommand.cpp
   )
      
set( KGL_CMD_HEADERS
     DrawCommand.h
   )

set( KGL_CMD_INCLUDE_DIRS

   )

set( KGL_CMD_LIBRARIES
    )

ADD_LIBRARY( kgl_command SHARED ${KGL_CMD_SOURCES} ${KGL_CMD_HEADERS} )

INSTALL( TARGETS kgl_command EXPORT kgl_lib DESTINATION ${KARMA_LIB_INSTALL_DIR} )
INSTALL( TARGETS kgl_command DESTINATION ${KARMA_LIB_INSTALL_DIR}         )
INSTALL( FILES ${KGL_CMD_HEADERS} DESTINATION ${KARMA_HEADER_INSTALL_DIR} )
